# design-patterns

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/abstract_factory/: abstract_factory.cpp
cpp/adapter/: adapter.cpp
cpp/bridge/: bridge.cpp
cpp/builder/: builder.cpp
cpp/chain_of_responsibility/: chain_of_responsibility.cpp
cpp/command/: command.cpp
cpp/composite/: composite.cpp
cpp/decorator/: decorator.cpp
cpp/facade/: facade.cpp
cpp/factory_method/: factory_method.cpp
cpp/flyweight/: flyweight.cpp
cpp/interpreter/: interpreter.cpp
cpp/iterator/: iterator.cpp
cpp/mediator/: handler.h  handler_reaslization.h  main.cpp  mediator.h
cpp/memento/: memento.cpp
cpp/observer/: observer.cpp
cpp/prototype/: prototype.cpp
cpp/proxy/: proxy.cpp
cpp/singleton/: singleton.cpp
cpp/state/: i_phone.h  i_phone_state.h  locked_phone_state.cpp  locked_phone_state.h  phone.cpp  phone.h  state.cpp  unlocked_phone_state.cpp  unlocked_phone_state.h
cpp/strategy/: strategy.cpp
cpp/template_method/: template_method.cpp
cpp/visitor/: visitor.cpp
cs/: cs.sln
cs/abstract_factory/: Program.cs
cs/adapter/: Program.cs
cs/bridge/: Program.cs
cs/builder/: Program.cs
cs/chain_of_responsibility/: Program.cs
cs/command/: Program.cs
cs/composite/: Program.cs
cs/decorator/: Program.cs
cs/facade/: Program.cs
cs/factory_method/: Program.cs
cs/flyweight/: Program.cs
cs/interpreter/: Program.cs
cs/iterator/: Program.cs
cs/mediator/: Program.cs
cs/memento/: Program.cs
cs/observer/: Program.cs
cs/prototype/: Program.cs
cs/proxy/: Program.cs
cs/roxy/: Program.cs
cs/singleton/: Program.cs  singleton.csproj
cs/state/: Program.cs
cs/strategy/: Program.cs
cs/template_method/: Program.cs
cs/visitor/: Program.cs
go/abstract_factory/: abstract_factory.go
go/decorator/: decorator.go
go/factory_method/: factory_method.go
go/observer/: observer.go
go/singleton/: singleton.go
go/strategy/: strategy.go
python/abstract_factory/: abstract_factory.py
python/adapter/: adapter.py
python/bridge/: bridge.py
python/builder/: builder.py
python/chain_of_responsibility/: chain_of_responsibility.py
python/command/: command.py
python/composite/: composite.py
python/decorator/: decorator.py
python/facade/: facade.py
python/factory_method/: factory_method.py
python/flyweight/: flyweight.py
(+35 files in other folders)
